# semantic-code-review

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  CPG.md  PARKED_IDEAS.md  README.md  REFACTOR.md  TREE_SITTER.md  install.sh  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: review.md
.github/workflows/: lint.yml  release.yml  tests.yml
commands/: pr.md  review.md
docs/: architecture.html  config.md  motivation.md  walkthrough.md
docs/adr/: 0001-tree-sitter-structural-layer.md  0002-review-console.md  0003-tool-surface-hosting.md  0004-rendered-markdown-diff.md  README.md
docs/slices/: README.md  rendered-markdown-diff.md  review-console.md  symbol-aware-folds.md  tool-surface-hosting.md  tree-sitter-structural-layer.md
docs/style/: general.md  python.md
scripts/: sync-upstream.sh
semantic_code_review/: __init__.py  cli.py  config.py  config_template.py  git_ops.py  paths.py
semantic_code_review/augment/: __init__.py  agents.py  claude_cli_client.py  cli_models.py  console.py  extra_review.py  fold_summary.py  gemini_cli_client.py  gemini_sdk_client.py  hunks.py  mcp_http_host.py  mcp_server.py  overview.py  pass_.py  pipeline.py  progress.py  prompts.py  repo_tool_fns.py  runner.py  schemas.py  skip.py  source_cache.py  tools.py  trace_adapter.py
semantic_code_review/backends/: __init__.py  _cli_driver.py  anthropic_sdk.py  base.py  claude_cli.py  gemini_cli.py  google_sdk.py  openai_compat.py
semantic_code_review/cache/: __init__.py  store.py
semantic_code_review/cli/: __init__.py  _shared.py  augment.py  config_cmd.py  credentials.py  fetch.py  init_cmd.py  lint.py  pr.py  prompt.py  review.py  runs_cmd.py  show.py  strip.py
semantic_code_review/fetch/: __init__.py  anchor.py  gh.py  github.py  github_comments.py  local.py  run_source.py  worktree.py
semantic_code_review/format/: __init__.py  emit.py  linenos.py  lint.py  parse.py  sidecar.py  strip.py
semantic_code_review/review/: __init__.py  comments.py  git.py  github.py  github_graphql.py  pr_flow.py  runner.py  server.py
semantic_code_review/structural/: __init__.py  diff.py  parse.py  symbols.py
semantic_code_review/viewer/: __init__.py  build_json.py  hunk_layout.py  render_html.py  rows.py
semantic_code_review/viewer/assets/: annotations.js  annotations.ts  boot.ts  comment_store.ts  comments.ts  console.ts  console_render.ts  console_selection.ts  data_store.ts  debug_drawer.ts  file_rows.ts  folds.ts  index.html  katex.ts  markdown.ts  mermaid.ts  post_modal.ts  progress.ts  render.ts  rendered.ts  sidebar.ts  sse.ts  template.html.j2  text_highlight.ts  types.d.ts  viewer.css  viewer.js
tests/: conftest.py  test_augment_pipeline.py  test_backend_select.py  test_cache_keys.py  test_claude_cli_client.py  test_cli_models.py  test_cli_smoke.py  test_config.py  test_config_template.py  test_console.py  test_fetch_url.py  test_fold_summary_apply.py  test_format_roundtrip.py  test_gemini_cli_client.py  test_gemini_sdk_client.py  test_github_graphql_post.py  test_github_pr_review.py  test_hunk_layout.py  test_init.py  test_linenos.py  test_local_diff.py  test_mcp_http_host.py  test_mcp_server.py  test_overview_groups.py  test_overview_seed.py  test_parse.py  test_paths.py  test_progress_meter.py  test_pydantic_ai_agents.py  test_repo_tool_fns.py  test_review_server.py  test_rows.py  test_runner.py  test_schema_unification.py  test_segments.py  test_source_cache.py  test_structural.py  test_tools.py  test_trace_adapter.py  test_viewer_json.py
tests/backends/: _subproc_fakes.py  test_anthropic_sdk.py  test_base.py  test_claude_cli.py  test_claude_cli_live.py  test_gemini_cli.py  test_google_sdk.py  test_openai_compat.py  test_subprocess.py
tests/fetch/: test_anchor.py  test_github.py  test_github_comments.py  test_local.py
tests/fixtures/: fold_regions_cases.json  sample.augmented.diff
tests/js/: annotations.test.ts  console_render.test.ts  console_selection.test.ts  folds.test.ts  markdown.test.ts  rendered.test.ts  setup.ts  text_highlight.test.ts  viewer.test.ts
tests/js/fixtures/: hunk-dom.ts
