[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-code-review"
version = "0.24.1"
description = "LLM-augmented GitHub PR viewer with foldable semantic diffs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{name = "Toby Sargeant", email = "toby.sargeant@populationgenomics.org.au"}]
keywords = ["code-review", "diff", "llm", "claude", "tree-sitter", "pull-request"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Software Development :: Quality Assurance",
  "Environment :: Console",
]
# Direct deps pinned exactly. The full transitive closure is pinned with
# hashes in requirements.lock; these top-level == constraints make sure
# any wheel-only install (uv tool run, pip install) resolves to the same
# direct versions the lockfile was generated against. When bumping, regen
# both: edit here, then `uv pip compile pyproject.toml -o requirements.lock
# --generate-hashes`.
dependencies = [
  "anthropic==0.97.0",
  "google-genai==1.75.0",
  "jinja2==3.1.6",
  "openai==2.34.0",
  "pydantic==2.13.3",
  "pydantic-ai==1.90.0",
  "tree-sitter==0.25.2",
  "tree-sitter-python==0.25.0",
  "tree-sitter-javascript==0.25.0",
  "tree-sitter-typescript==0.23.2",
  "typer==0.24.2",
  "unidiff==0.7.5",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
]

[project.urls]
Homepage = "https://github.com/populationgenomics/semantic-code-review"
Repository = "https://github.com/populationgenomics/semantic-code-review"
Issues = "https://github.com/populationgenomics/semantic-code-review/issues"

[project.scripts]
scr = "semantic_code_review.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["semantic_code_review*"]

[tool.setuptools.package-data]
"semantic_code_review.viewer" = ["assets/*", "assets/vendor/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
