[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-code-review"
version = "0.25.1"
description = "LLM-augmented GitHub PR viewer with foldable semantic diffs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{name = "Toby Sargeant", email = "toby.sargeant@populationgenomics.org.au"}]
keywords = ["code-review", "diff", "llm", "claude", "tree-sitter", "pull-request"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Software Development :: Quality Assurance",
  "Environment :: Console",
]
# Direct deps pinned exactly. The full transitive closure is pinned with
# hashes in requirements.lock; these top-level == constraints make sure
# any wheel-only install (uv tool run, pip install) resolves to the same
# direct versions the lockfile was generated against. When bumping, regen
# both: edit here, then `uv pip compile pyproject.toml -o requirements.lock
# --generate-hashes`.
dependencies = [
  "anthropic==0.97.0",
  "google-genai==1.75.0",
  "jinja2==3.1.6",
  "openai==2.34.0",
  "pydantic==2.13.3",
  "pydantic-ai==1.90.0",
  "tree-sitter==0.25.2",
  "tree-sitter-python==0.25.0",
  "tree-sitter-javascript==0.25.0",
  "tree-sitter-typescript==0.23.2",
  "typer==0.24.2",
  "unidiff==0.7.5",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
]

# Dev tooling (PEP 735 groups): not shipped, so it lives here rather than in
# project.optional-dependencies. lint carries the whole static-check gate that
# `pre-commit run --all-files` drives; pyright resolves against the project's
# own deps (installed by `uv sync --group lint`).
[dependency-groups]
test = ["pytest==9.0.3", "pytest-asyncio==1.3.0"]
lint = ["ruff", "pyright", "pre-commit"]

[project.urls]
Homepage = "https://github.com/populationgenomics/semantic-code-review"
Repository = "https://github.com/populationgenomics/semantic-code-review"
Issues = "https://github.com/populationgenomics/semantic-code-review/issues"

[project.scripts]
scr = "semantic_code_review.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["semantic_code_review*"]

[tool.setuptools.package-data]
"semantic_code_review.viewer" = ["assets/*", "assets/vendor/*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "W",
    "ANN", "ARG", "BLE", "COM", "DTZ", "ERA", "EXE", "ICN", "ISC",
    "PGH", "PIE", "PL", "PT", "PYI", "RET", "RSE", "RUF",
    "SIM", "SLF", "T10", "TID", "UP", "YTT",
]

fixable = ["ALL"]

ignore = [
    "COM812",  # trailing comma conflicts with the formatter
    "ISC001",  # implicit-string-concat conflicts with the formatter
    # D1xx — docstring *presence*. Format is enforced when a docstring exists,
    # but one isn't required on every public symbol.
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    # D205/D401 are docstring *prose* rules (summary line, imperative mood) —
    # not worth churning ~70 existing docstrings; format rules that autofix stay on.
    "D205", "D401",
    # Typer's `x: T = typer.Option(...)` / `typer.Argument(...)` is the
    # framework's declaration idiom, not an accidental mutable default.
    "B008",
    # Complexity metrics fire on genuinely sprawling code but also on everyday
    # parsers/dispatchers; not churning structure in this pass.
    "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004",
    # Interface-conformance signatures (backend/handler protocols) carry args
    # a given implementation doesn't use.
    "ARG001", "ARG002",
    # Renaming exception classes / params that shadow builtins is an API change,
    # not a mechanical cleanup.
    "N818", "A002",
    # A few deliberate module-level singletons are mutated through globals.
    "PLW0603",
    # DEFERRED (tracked with the module-import refactor): TID252 bans relative
    # imports and ANN401 bans `Any` — both are large, review-gated changes, and
    # TID252 overlaps the "import modules, not symbols" refactor in docs/style.
    "TID252", "ANN401",
    # Subjective simplifications — nested `with` and if-else-vs-ternary are
    # often clearer left as written; not worth churning.
    "SIM108", "SIM117",
    # En-dashes and similar typography are intentional in user-facing strings.
    "RUF001", "RUF002", "RUF003",
    # False-positives on prose/section comments that look code-like
    # (`# scope == "repo"`, sphinx `#:` type comments, section headers).
    "ERA001",
    # scr uses deliberate lazy/function-level imports to keep CLI startup light
    # and keep heavy deps (pydantic_ai, anthropic) out of the --no-augment path.
    "PLC0415",
    # `class X(str, Enum)` vs StrEnum differ in str()/serialization output;
    # not changing enum bases mechanically.
    "UP042",
    # Unpacked names document the tuple shape even when one half is unused.
    "RUF059",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports: names imported for the package surface
"tests/**" = [
    "ANN",    # type annotations not required on tests
    "D",      # docstrings not required on tests
    "SLF001", # tests legitimately reach into module privates
    "PT018",  # multi-part asserts are fine in tests
    "BLE001", # best-effort helpers in tests: log/continue
    "PT011",  # broad pytest.raises without match= is fine in tests
    "PT017",  # asserting on the caught exception in an except block is fine
    "N802",   # test names may echo camelCase API fields (databaseId, …)
    "DTZ001", # naive datetimes are fine in fixture data
    "SIM115", # tests may open files without a context manager
    "RUF043", # regex metacharacters in pytest.raises match= are fine in tests
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
pythonVersion = "3.11"
include = ["semantic_code_review"]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
